--- a/myspringcloud2020/cloud-provider-payment8001/src/main/resources/application.yml
+++ b/myspringcloud2020/cloud-provider-payment8001/src/main/resources/application.yml
@@ -12,3 +12,9 @@ spring:
 mybatis:
     mapperLocations: classpath:mapper/*.xml
     type-aliases-package: com.example.springcloud.entities
+eureka:
+  client:
+    fetch-registry: true
+    register-with-eureka: true
+    service-url:
+      defaultZone: http://eureka7001.com:7001/eureka,http://eureka7002.com:7002/eureka
