--- a/myspringcloud2020/cloud-provider-payment8001/pom.xml
+++ b/myspringcloud2020/cloud-provider-payment8001/pom.xml
@@ -64,6 +64,10 @@
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
